--- a/nexus/nexus-repository.yaml
+++ b/nexus/nexus-repository.yaml
@@ -88,7 +88,6 @@ spec:
     kind: ClusterIssuer
   dnsNames:
     - nexus.ricearaul.com
-    - docker.nexus.ricearaul.com
 ---
 apiVersion: traefik.io/v1alpha1
 kind: IngressRoute
@@ -108,6 +107,19 @@ spec:
   tls:
     secretName: nexus-certificate-secret
 ---
+apiVersion: cert-manager.io/v1
+kind: Certificate
+metadata:
+  name: nexus-ingressroute-certificate-dockerrepository
+  namespace: nexus-repository
+spec:
+  secretName: nexus-certificate-secret-dockerrepository
+  issuerRef:
+    name: cloudflare-clusterissuer
+    kind: ClusterIssuer
+  dnsNames:
+    - dockerrepository.ricearaul.com
+---
 apiVersion: traefik.io/v1alpha1
 kind: IngressRoute
 metadata:
@@ -118,10 +130,10 @@ spec:
     - websecure
   routes:
     - kind: Rule
-      match: Host(`docker.nexus.ricearaul.com`)
+      match: Host(`dockerrepository.ricearaul.com`)
       priority: 10
       services:
         - name: sonatype-service
           port: 5000
   tls:
-    secretName: nexus-certificate-secret
+    secretName: nexus-certificate-secret-dockerrepository
