--- a/nexus/nexus-repository.yaml
+++ b/nexus/nexus-repository.yaml
@@ -71,6 +71,7 @@ spec:
           name: nexus
           ports:
             - containerPort: 8081
+            - containerPort: 5000
           volumeMounts:
             - name: registry-vol
               mountPath: /nexus-data
