--- a/docmost/docmost.values.yaml
+++ b/docmost/docmost.values.yaml
@@ -1,7 +1,13 @@
 apiVersion: v1
+kind: Namespace
+metadata:
+  name: docmost-namespace
+---
+apiVersion: v1
 kind: PersistentVolumeClaim
 metadata:
   name: docmost-pvc
+  namespace: docmost-namespace
 spec:
   accessModes:
     - ReadWriteOnce
@@ -13,6 +19,7 @@ apiVersion: v1
 kind: PersistentVolumeClaim
 metadata:
   name: db-pvc
+  namespace: docmost-namespace
 spec:
   accessModes:
     - ReadWriteOnce
@@ -24,6 +31,7 @@ apiVersion: v1
 kind: PersistentVolumeClaim
 metadata:
   name: redis-pvc
+  namespace: docmost-namespace
 spec:
   accessModes:
     - ReadWriteOnce
@@ -35,6 +43,7 @@ apiVersion: apps/v1
 kind: Deployment
 metadata:
   name: db
+  namespace: docmost-namespace
 spec:
   replicas: 1
   selector:
@@ -67,6 +76,7 @@ apiVersion: v1
 kind: Service
 metadata:
   name: db
+  namespace: docmost-namespace
 spec:
   ports:
     - port: 5432
@@ -77,6 +87,7 @@ apiVersion: apps/v1
 kind: Deployment
 metadata:
   name: redis
+  namespace: docmost-namespace
 spec:
   replicas: 1
   selector:
@@ -102,6 +113,7 @@ apiVersion: v1
 kind: Service
 metadata:
   name: redis
+  namespace: docmost-namespace
 spec:
   ports:
     - port: 6379
@@ -112,6 +124,7 @@ apiVersion: apps/v1
 kind: Deployment
 metadata:
   name: docmost
+  namespace: docmost-namespace
 spec:
   replicas: 1
   selector:
@@ -148,6 +161,7 @@ apiVersion: v1
 kind: Service
 metadata:
   name: docmost
+  namespace: docmost-namespace
 spec:
   ports:
     - port: 3000
