--- a/docmost/docmost.values.yaml
+++ b/docmost/docmost.values.yaml
@@ -142,7 +142,7 @@ spec:
             - name: APP_URL
               value: "http://localhost:3000"
             - name: APP_SECRET
-              value: "REPLACE_WITH_LONG_SECRET"
+              value: "STRONG_SECRET_VALUE"
             - name: DATABASE_URL
               value: "postgresql://docmost:STRONG_DB_PASSWORD@db:5432/docmost?schema=public"
             - name: REDIS_URL
