--- a/docmost/docmost.values.yaml
+++ b/docmost/docmost.values.yaml
@@ -169,3 +169,34 @@ spec:
   selector:
     app: docmost
   type: LoadBalancer
+---
+apiVersion: cert-manager.io/v1
+kind: Certificate
+metadata:
+  name: docmost-ingressroute-certificate
+  namespace: docmost-namespace
+spec:
+  secretName: docmost-certificate-secret
+  issuerRef:
+    name: cloudflare-clusterissuer
+    kind: ClusterIssuer
+  dnsNames:
+    - docmost.ricearaul.com
+---
+apiVersion: traefik.io/v1alpha1
+kind: IngressRoute
+metadata:
+  name: docmost-ingressroute
+  namespace: docmost-namespace
+spec:
+  entryPoints:
+    - websecure
+  routes:
+    - kind: Rule
+      match: Host(`docmost.ricearaul.com`)
+      priority: 10
+      services:
+        - name: docmost
+          port: 3000
+  tls:
+    secretName: docmost-certificate-secret
