--- a/nexus/nexus-repository.yaml
+++ b/nexus/nexus-repository.yaml
@@ -1,202 +1,104 @@
 apiVersion: v1
-kind: Namespace
+kind: PersistentVolume
 metadata:
-  name: docmost-namespace
+  name: sonatypestorage
+  namespace: nexus-repository
+  labels:
+    name: sonatypestorage # claim for volume
+spec:
+  storageClassName: local-path # Use K3s default local-path storage class
+  capacity:
+    storage: 20Gi
+  accessModes:
+    - ReadWriteOnce
+  hostPath:
+    path: "/data/nexus-repository" # Local directory on the node
 ---
 apiVersion: v1
 kind: PersistentVolumeClaim
 metadata:
-  name: docmost-pvc
-  namespace: docmost-namespace
+  name: sonatype-registry-data
+  namespace: nexus-repository
 spec:
+  storageClassName: local-path
   accessModes:
     - ReadWriteOnce
   resources:
     requests:
-      storage: 1Gi
----
-apiVersion: v1
-kind: PersistentVolumeClaim
-metadata:
-  name: db-pvc
-  namespace: docmost-namespace
-spec:
-  accessModes:
-    - ReadWriteOnce
-  resources:
-    requests:
-      storage: 1Gi
----
-apiVersion: v1
-kind: PersistentVolumeClaim
-metadata:
-  name: redis-pvc
-  namespace: docmost-namespace
-spec:
-  accessModes:
-    - ReadWriteOnce
-  resources:
-    requests:
-      storage: 512Mi
----
-apiVersion: apps/v1
-kind: Deployment
-metadata:
-  name: db
-  namespace: docmost-namespace
-spec:
-  replicas: 1
-  selector:
-    matchLabels:
-      app: db
-  template:
-    metadata:
-      labels:
-        app: db
-    spec:
-      containers:
-        - name: db
-          image: postgres:16-alpine
-          env:
-            - name: POSTGRES_DB
-              value: "docmost"
-            - name: POSTGRES_USER
-              value: "docmost"
-            - name: POSTGRES_PASSWORD
-              value: "STRONG_DB_PASSWORD"
-          volumeMounts:
-            - mountPath: /var/lib/postgresql/data
-              name: db-storage
-      volumes:
-        - name: db-storage
-          persistentVolumeClaim:
-            claimName: db-pvc
+      storage: 10Gi
 ---
 apiVersion: v1
 kind: Service
 metadata:
-  name: db
-  namespace: docmost-namespace
+  name: sonatype-service
+  namespace: nexus-repository
 spec:
   ports:
-    - port: 5432
+    - name: sonatype-registry
+      port: 8081
+      protocol: TCP
+      targetPort: 8081
   selector:
-    app: db
+    app: sonatype-registry
 ---
 apiVersion: apps/v1
 kind: Deployment
 metadata:
-  name: redis
-  namespace: docmost-namespace
+  name: sonatype-registry
+  namespace: nexus-repository
+  labels:
+    app: sonatype-registry
 spec:
   replicas: 1
   selector:
     matchLabels:
-      app: redis
+      app: sonatype-registry
   template:
     metadata:
       labels:
-        app: redis
+        app: sonatype-registry
     spec:
-      containers:
-        - name: redis
-          image: redis:7.2-alpine
-          volumeMounts:
-            - mountPath: /data
-              name: redis-storage
       volumes:
-        - name: redis-storage
+        - name: registry-vol
           persistentVolumeClaim:
-            claimName: redis-pvc
----
-apiVersion: v1
-kind: Service
-metadata:
-  name: redis
-  namespace: docmost-namespace
-spec:
-  ports:
-    - port: 6379
-  selector:
-    app: redis
----
-apiVersion: apps/v1
-kind: Deployment
-metadata:
-  name: docmost
-  namespace: docmost-namespace
-spec:
-  replicas: 1
-  selector:
-    matchLabels:
-      app: docmost
-  template:
-    metadata:
-      labels:
-        app: docmost
-    spec:
+            claimName: sonatype-registry-data
       containers:
-        - name: docmost
-          image: docmost/docmost:latest
-          env:
-            - name: APP_URL
-              value: "http://localhost:3000"
-            - name: APP_SECRET
-              value: "STRONG_SECRET_VALUE"
-            - name: DATABASE_URL
-              value: "postgresql://docmost:STRONG_DB_PASSWORD@db:5432/docmost?schema=public"
-            - name: REDIS_URL
-              value: "redis://redis:6379"
+        - image: sonatype/nexus3
+          name: nexus
           ports:
-            - containerPort: 3000
+            - containerPort: 8081
           volumeMounts:
-            - mountPath: /app/data/storage
-              name: docmost-storage
-      volumes:
-        - name: docmost-storage
-          persistentVolumeClaim:
-            claimName: docmost-pvc
----
-apiVersion: v1
-kind: Service
-metadata:
-  name: docmost
-  namespace: docmost-namespace
-spec:
-  ports:
-    - port: 3000
-      targetPort: 3000
-  selector:
-    app: docmost
-  type: LoadBalancer
+            - name: registry-vol
+              mountPath: /nexus-data
+              subPath: sonatype
 ---
 apiVersion: cert-manager.io/v1
 kind: Certificate
 metadata:
-  name: docmost-ingressroute-certificate
-  namespace: docmost-namespace
+  name: nexus-ingressroute-certificate
+  namespace: nexus-repository
 spec:
-  secretName: docmost-certificate-secret
+  secretName: nexus-certificate-secret
   issuerRef:
     name: cloudflare-clusterissuer
     kind: ClusterIssuer
   dnsNames:
-    - docmost.ricearaul.com
+    - nexus.ricearaul.com
 ---
 apiVersion: traefik.io/v1alpha1
 kind: IngressRoute
 metadata:
-  name: docmost-ingressroute
-  namespace: docmost-namespace
+  name: nexus-ingressroute
+  namespace: nexus-repository
 spec:
   entryPoints:
     - websecure
   routes:
     - kind: Rule
-      match: Host(`docmost.ricearaul.com`)
+      match: Host(`nexus.ricearaul.com`)
       priority: 10
       services:
-        - name: docmost
-          port: 3000
+        - name: sonatype-service
+          port: 8081
   tls:
-    secretName: docmost-certificate-secret
+    secretName: nexus-certificate-secret
