--- a/nexus/nexus-repository.yaml
+++ b/nexus/nexus-repository.yaml
@@ -1,11 +1,11 @@
 ---
-# 1. Create a dedicated namespace for Nexus
+# 1. Create the namespace for Nexus
 apiVersion: v1
 kind: Namespace
 metadata:
   name: nexus-repository
 ---
-# 2. Define a PersistentVolume (cluster‑scoped) using local-path storage
+# 2. Define a PersistentVolume (PVs are cluster‑scoped, so no namespace)
 apiVersion: v1
 kind: PersistentVolume
 metadata:
@@ -13,15 +13,15 @@ metadata:
   labels:
     name: sonatypestorage
 spec:
-  storageClassName: local-path  # k3s default storage class
+  storageClassName: local-path
   capacity:
     storage: 20Gi
   accessModes:
     - ReadWriteOnce
   hostPath:
-    path: "/data/nexus-repository"  # Ensure this directory exists on your node
+    path: "/data/nexus-repository"  # Make sure this directory exists on your node
 ---
-# 3. Create a PersistentVolumeClaim bound to the above PV
+# 3. Create a PersistentVolumeClaim (PVC)
 apiVersion: v1
 kind: PersistentVolumeClaim
 metadata:
@@ -35,7 +35,7 @@ spec:
     requests:
       storage: 10Gi
 ---
-# 4. Create a ConfigMap containing a custom nexus.properties file to set the Docker HTTPS port
+# 4. Create a ConfigMap for custom Nexus configuration
 apiVersion: v1
 kind: ConfigMap
 metadata:
@@ -43,17 +43,17 @@ metadata:
   namespace: nexus-repository
 data:
   nexus.properties: |
-    # Enable the Docker repository connector on port 5000
+    # Set the Docker HTTPS connector port to 5000
     nexus.docker.https.port=5000
 ---
-# 5. Deploy Nexus Repository OSS with both UI and Docker ports enabled
+# 5. Deploy Nexus Repository OSS with an init container to fix permissions and create required directories
 apiVersion: apps/v1
 kind: Deployment
 metadata:
   name: sonatype-registry
   namespace: nexus-repository
   labels:
-    app: sonatype-registry
+    app: sonatypestorage
 spec:
   replicas: 1
   selector:
@@ -64,10 +64,23 @@ spec:
       labels:
         app: sonatype-registry
     spec:
-      # Run the container as UID 200 and adjust group permissions
+      # Ensure the container runs as UID 200 and its volume is writable
       securityContext:
         runAsUser: 200
         fsGroup: 200
+      # Init container: create directories and fix ownership
+      initContainers:
+        - name: fix-permissions
+          image: busybox
+          command:
+            - sh
+            - -c
+            - |
+              mkdir -p /nexus-data/log /nexus-data/tmp /nexus-data/instances
+              chown -R 200:200 /nexus-data
+          volumeMounts:
+            - name: registry-vol
+              mountPath: /nexus-data
       volumes:
         - name: registry-vol
           persistentVolumeClaim:
@@ -88,15 +101,13 @@ spec:
             - containerPort: 5000
               name: docker
           volumeMounts:
-            # Mount the persistent storage to /nexus-data so Nexus can create its directories
             - name: registry-vol
               mountPath: /nexus-data
-            # Mount the custom nexus.properties to override the Docker port configuration
             - name: nexus-config
               mountPath: /nexus-data/etc/nexus.properties
               subPath: nexus.properties
 ---
-# 6. Create a Service that exposes both the UI and Docker repository ports
+# 6. Expose Nexus via a Service that provides two ports
 apiVersion: v1
 kind: Service
 metadata:
@@ -107,14 +118,14 @@ spec:
     app: sonatype-registry
   ports:
     - name: ui
-      port: 80         # Exposed port for the UI (will be mapped to container port 8081)
+      port: 80         # Externally used for the UI (mapped to container port 8081)
       targetPort: 8081
     - name: docker
-      port: 5000       # Exposed port for the Docker repository (will be mapped to container port 5000)
+      port: 5000       # Externally used for the Docker repository (mapped to container port 5000)
       targetPort: 5000
   type: ClusterIP
 ---
-# 7. Issue a TLS certificate for nexus.ricearaul.com using cert-manager (with your Cloudflare-based ClusterIssuer)
+# 7. Issue a TLS certificate for nexus.ricearaul.com using cert-manager
 apiVersion: cert-manager.io/v1
 kind: Certificate
 metadata:
@@ -128,7 +139,7 @@ spec:
   dnsNames:
     - nexus.ricearaul.com
 ---
-# 8. Expose the Nexus dashboard via Traefik’s websecure entrypoint
+# 8. IngressRoute for the Nexus dashboard (UI) via Traefik’s websecure entrypoint (port 443)
 apiVersion: traefik.io/v1alpha1
 kind: IngressRoute
 metadata:
@@ -147,7 +158,7 @@ spec:
   tls:
     secretName: nexus-certificate-secret
 ---
-# 9. Expose the Nexus Docker repository via Traefik’s docker entrypoint (on port 5000)
+# 9. IngressRoute for the Nexus Docker repository via Traefik’s docker entrypoint (port 5000)
 apiVersion: traefik.io/v1alpha1
 kind: IngressRoute
 metadata:
