--- a/nexus/nexus-repository.yaml
+++ b/nexus/nexus-repository.yaml
@@ -8,7 +8,7 @@ metadata:
 spec:
   storageClassName: local-path # Use K3s default local-path storage class
   capacity:
-    storage: 20Gi
+    storage: 30Gi
   accessModes:
     - ReadWriteOnce
   hostPath:
@@ -25,7 +25,7 @@ spec:
     - ReadWriteOnce
   resources:
     requests:
-      storage: 10Gi
+      storage: 20Gi
 ---
 apiVersion: v1
 kind: Service
@@ -71,6 +71,7 @@ spec:
           image: sonatype/nexus3
           ports:
             - containerPort: 8081
+            - containerPort: 5000
           volumeMounts:
             - name: registry-vol
               mountPath: /nexus-data
@@ -79,7 +80,7 @@ spec:
             limits:
               memory: "3Gi"
             requests:
-              memory: "3Gi"
+              memory: "2Gi"
 ---
 apiVersion: cert-manager.io/v1
 kind: Certificate
