--- a/nexus/test/test.values.yaml
+++ b/nexus/test/test.values.yaml
@@ -2,7 +2,7 @@ apiVersion: apps/v1
 kind: Deployment
 metadata:
   name: alpine-app
-  namespace: default
+  namespace: test-alpine-namespace
 spec:
   replicas: 1
   selector:
