--- a/jeager/base/certificate.yaml
+++ b/jeager/base/certificate.yaml
@@ -1,12 +1,12 @@
 apiVersion: cert-manager.io/v1
 kind: Certificate
 metadata:
-  name: jeager-ricearaul-ingressroute-certificate
-  namespace: jeager
+  name: jaeger-ricearaul-ingressroute-certificate
+  namespace: jaeger
 spec:
   secretName: jeager-ricearaul-com-certificate-secret
   issuerRef:
     name: cloudflare-clusterissuer
     kind: ClusterIssuer
   dnsNames:
-    - jeager.ricearaul.com
+    - jaeger.ricearaul.com
