--- a/jeager/base/service.yaml
+++ b/jeager/base/service.yaml
@@ -33,7 +33,7 @@ spec:
 apiVersion: v1
 kind: Service
 metadata:
-  name: jeager-ui-service
+  name: jaeger-ui-service
   namespace: jaeger
 spec:
   selector:
