--- a/jenkins/ingrees.yaml
+++ b/jenkins/ingrees.yaml
@@ -40,3 +40,16 @@ spec:
           port: 80
   tls:
     secretName: jenkins-ricearaul-certificate-secret
+---
+apiVersion: v1
+kind: PersistentVolumeClaim
+metadata:
+  name: jenkins-agent-cache
+  namespace: jenkins
+spec:
+  accessModes:
+    - ReadWriteOnce
+  storageClassName: local-path
+  resources:
+    requests:
+      storage: 10Gi
