Add missing file

--- a/jenkins/agent/base/kustomization.yaml
+++ b/jenkins/agent/base/kustomization.yaml
@@ -5,3 +5,6 @@ resources:
   - service-account.yaml
   - agent-role.yaml
   - agent-rolebinding.yaml
+  - agent-storage.yaml
+  - agent-pvc.yaml
+  
