--- a/jenkins/agent/overlays/prod/agent-angular.yaml
+++ b/jenkins/agent/overlays/prod/agent-angular.yaml
@@ -29,11 +29,15 @@ spec:
               secretKeyRef:
                 name: jenkins-angular-agent-secret
                 key: agent-secret
+        command: 
+          - jenkins-agent
         args:
           - -url
           - "http://jenkins.jenkins.svc.cluster.local:8080"
-          - "${JENKINS_SECRET}"
-          - "${JENKINS_AGENT_NAME}"
+          - "-secret"
+          - "$(JENKINS_SECRET)"
+          - "-name"
+          - "$(JENKINS_AGENT_NAME)"
         resources:
           requests:
             cpu: "200m"
